--- a/tox.ini
+++ b/tox.ini
@@ -2,4 +2,21 @@
 envlist=py36
 skipdist=True
 
+[common]
+deps=
+  -r{toxinidir}/requirements.txt
+  pytest-cov
+  pylint
+  pylint-quotes
+  pytest-asyncio
+  asynctest
+  mock
+
+[testenv]
+deps={[common]deps}
+commands=
+    pytest -s \
+        {posargs}
+    pylint --load-plugins pylint_quotes aio_netbox
+
 
