--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,17 @@ deps=
   mock
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
 deps={[common]deps}
 commands=
     pytest -s \
+      --cov-report term-missing \
+      --cov aionetbox \
         {posargs}
-    pylint --load-plugins pylint_quotes aio_netbox
+    pylint --disable=C0111,R1720,W0107 --load-plugins pylint_quotes aionetbox
 
-
+# List of disabled pylint directives
+# - C0111 Module docstrings
+# - R1720 Raise after else
+# - W0107 Pass statement
