Inject the publish and dial back to "py3" on tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py36
+envlist=py3
 skipdist=True
 
 [common]
@@ -27,3 +27,17 @@ commands=
 # - C0111 Module docstrings
 # - R1720 Raise after else
 # - W0107 Pass statement
+
+
+[testenv:publish]
+description=
+    publish to pypi
+deps=
+    -r{toxinidir}/requirements.txt
+    twine>=1.5.0
+passenv=
+    TWINE_USERNAME
+    TWINE_PASSWORD
+commands=
+    python setup.py sdist bdist_wheel
+    twine upload dist/*
