[pipeline] - Trialing shared ci library/pipeline structure
- Using a very simple and stripped down pipeline module to test how
  functionally viable this approach is for any generic tox based python
  project test suite / automation.

--- a/tox.ini
+++ b/tox.ini
@@ -21,13 +21,18 @@ commands=
       --cov-report term-missing \
       --cov aionetbox \
         {posargs}
-    pylint --disable=C0111,R1720,W0107 --load-plugins pylint_quotes aionetbox
 
 # List of disabled pylint directives
 # - C0111 Module docstrings
 # - R1720 Raise after else
 # - W0107 Pass statement
 
+[testenv:lint]
+description=
+    Lint the code for codequality
+deps={[common]deps}
+commands=
+    pylint --disable=C0111,R1720,W0107 --load-plugins pylint_quotes aionetbox
 
 [testenv:publish]
 description=
