--- a/tox.ini
+++ b/tox.ini
@@ -29,14 +29,14 @@ commands=
 
 [testenv:lint]
 description=
-    Lint the code for codequality
+    Lint the code for codequality.
 deps={[common]deps}
 commands=
     pylint --disable=C0111,R1720,W0107 --load-plugins pylint_quotes aionetbox
 
-[testenv:publish]
+[testenv:release]
 description=
-    publish to pypi
+    publish a tagged release to pypi. Used in CI automation.
 deps=
     -r{toxinidir}/requirements.txt
     twine>=1.5.0
