--- a/tox.ini
+++ b/tox.ini
@@ -45,4 +45,4 @@ passenv=
     TWINE_PASSWORD
 commands=
     python setup.py sdist bdist_wheel
-    twine upload dist/*
+    twine upload dist/* --verbose
