Roundup of various fixes
- Adds an integration test suite that will attempt to query netbox-dev
  and validate some data. This is a very rigid test suite that would
  need to be scaffoled out to deploy an independent netbox, with preseed
  data that way we have some guarantees about what data is available.

- Ignore vscode bits

- Update secrets within sctl for integration testing
- tox ini tweaks

--- a/tox.ini
+++ b/tox.ini
@@ -15,12 +15,16 @@ deps=
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+    NETBOX_INTEGRATION_HOST = https://netbox.development.cloud.vio.sh
+passenv = *
 deps={[common]deps}
 commands=
     pytest -s \
       --cov-report term-missing \
       --cov aionetbox \
         {posargs}
+
+
 
 # List of disabled pylint directives
 # - C0111 Module docstrings
@@ -34,15 +38,14 @@ deps={[common]deps}
 commands=
     pylint --disable=C0111,R1720,W0107 --load-plugins pylint_quotes aionetbox
 
+
 [testenv:release]
 description=
     publish a tagged release to pypi. Used in CI automation.
 deps=
     -r{toxinidir}/requirements.txt
     twine>=1.5.0
-passenv=
-    TWINE_USERNAME
-    TWINE_PASSWORD
+passenv=*
 commands=
     python setup.py sdist bdist_wheel
     twine upload dist/* --verbose
