:ok_hand: Review comments

--- a/tox.ini
+++ b/tox.ini
@@ -31,11 +31,10 @@ commands=
 [testenv:lint]
 deps=
     -r{toxinidir}/requirements.txt
-    pylint
+    flake8
 
 commands=
-    pylint --disable=C0111,C0301,R1720,W0107,C0103,R0913 aionetbox
-
+    flake8 --show-source --statistics aionetbox tests
 
 [testenv:release]
 description=
