:green_heart: Explicitly pass environment vars for TWINE

--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,9 @@ description=
 deps=
     -r{toxinidir}/requirements.txt
     twine>=1.5.0
-passenv= TWINE*
+passenv=
+    TWINE_USERNAME
+    TWINE_PASSWORD
 commands=
     python setup.py sdist bdist_wheel
     twine upload dist/* --verbose
