:bug: Return boolean for successful deletes

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps=
     -r{toxinidir}/requirements.txt
     asynctest
     pytest-asyncio
-    pytest<6.0.0
+    pytest>=6.0.0
     pytest-cov>=2.5.1
     pytest-html>=1.14.2
     pytest-mock>=1.6.0
